# mymusic

./: .gitignore  Cargo.toml  README.md  temp.json
src/: crawlers.rs  data.rs  error.rs  lib.rs  parsers.rs  serializer.rs
