[package]
name = "mymusic"
version = "0.1.0"
authors = ["Javier L. <135663+xleyba@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
regex = "1.3.9"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0.53"