[package]
name = "mymusic"
version = "0.1.1"
authors = ["Javier L. <135663+xleyba@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.7"
walkdir = "2.3.1"
regex = "1.3.9"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
failure = "0.1.8"
clap = "2.33.3"
structopt = "0.3.17"
spinners = "1.2.0"